--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="sidebar" id="sidebar">
         <button class="close-btn" onclick="closeSidebar()">✖</button>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://dandcool.github.io">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
