--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="close-btn" onclick="closeSidebar()">✖</button>
         <ul>
             <li><a href="https://dandcool.github.io">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="https://dandcool.github.io/portfolio.html/">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
