--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="sidebar" id="sidebar">
         <button class="close-btn" onclick="closeSidebar()">✖</button>
         <ul>
-            <li><a href="https://dandcool.github.io">Home</a></li>
-            <li><a href="https://dandcool.github.io/portfolio.html/">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://dandcool.github.io/">Home</a></li>
+            <li><a href="https://dandcool.github.io/portfolio.html">Portfolio</a></li>
+            <li><a href="https://dandcool.github.io/about.html">About</a></li>
+            <li><a href="https://dandcool.github.io/contact.html">Contact</a></li>
         </ul>
     </div>
 
