--- a/index.html
+++ b/index.html
@@ -33,16 +33,23 @@
             <h2>My Projects</h2>
             <ul>
                 <li>
-                    <h3>Project 1</h3>
-                    <p>Description of your first project.</p>
+                    <h3>The Typing Machine</h3>
+                    <p>The typing machine was my first project. It involved a few simple commands and the CLion console as the interface for the user
+                    to be able to input strings inside, and then put the commands that they want to use on the said string.
+                    This project could and was easily done in one day, and later was fixed and enhanced over the following days.</p>
                 </li>
                 <li>
-                    <h3>Project 2</h3>
-                    <p>Description of your second project.</p>
+                    <h3>The Mine Sweeper</h3>
+                    <p>This project involves creating a console-based version of the classic Minesweeper game. 
+                        The game requires the player to uncover all safe cells and flag the mines without triggering any. 
+                        The player interacts with a grid where mines are randomly placed, and numbers indicate the number of adjacent mines. 
+                        The project includes features like different difficulty levels, a player ranking system, and saving game progress to a file. 
+                        It also requires handling game logic for revealing and flagging cells, and managing player scores.</p>
                 </li>
                 <li>
-                    <h3>Project 3</h3>
-                    <p>Description of your third project.</p>
+                    <h3>Future projects</h3>
+                    <p>I'm hoping to work fast but effectively on my future projects so I'll have more time learning and doing what I love,
+                    which includes learning game development... :D</p>
                 </li>
                 <!-- Add more projects as needed -->
             </ul>
@@ -52,9 +59,9 @@
             <h2>Skills</h2>
             <p>Here are some of the skills I have developed over time:</p>
             <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
+                <li>Basic programming in C and C++</li>
+                <li>Playing the piano and creating some music using FL Studio</li>
+                <li>Different gaming skills, like parkour games, osu, and puzzle games.</li>
                 <!-- Add more skills as needed -->
             </ul>
         </section>
