--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+body {
+  background-image: url("a016992542853f56168436eb10216e00 (1).jpg");
+  background-size: cover; /* Optional: Adjusts the size of the background image */
+  background-repeat: no-repeat; /* Optional: Prevents the image from repeating */
+  background-position: center center; /* Optional: Centers the background image */
+}
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio Page">
