--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url("a016992542853f56168436eb10216e00 (1).jpg");
+  background-image: url("a016992542853f56168436eb10216e00.jpg");
   background-size: cover; /* Optional: Adjusts the size of the background image */
   background-repeat: no-repeat; /* Optional: Prevents the image from repeating */
   background-position: center center; /* Optional: Centers the background image */
